[add] add custom authentication
jwtでtoken認証するところまで
秘密鍵の部分がガバ

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   mvc:
     favicon:
-      enabled: false
+      enabled: true
 
   security:
     user:
@@ -16,27 +16,5 @@ spring:
 
     jwt:
       token:
-        secret-key: secret-key
-        expire-length: 300000 # 5 minutes duration by default: 5 minutes * 60 seconds * 1000 miliseconds
-
-logging:
-  level:
-    root: DEBUG
-
-    org:
-      springframework:
-        web:
-          servlet:
-            mvc:
-              method:
-                annotation:
-                  RequestMappingHandlerMapping: TRACE
-
-
-
-        security:
-          oauth2:
-            server:
-              resource: TRACE
-
-
+#        secret-key: secret-key
+#        expire-length: 300000 # 5 minutes duration by default: 5 minutes * 60 seconds * 1000 miliseconds
